Add department management features; enhance order handling and client management